--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Password Generator</title>
     <link rel="stylesheet" href="./Assets/css/reset.css" />
     <link rel="stylesheet" href="./Assets/css/style.css" />
+    <title>Password Generator</title>
   </head>
 
-  <body>
+  <body class="image1">
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
@@ -33,5 +34,5 @@
     </div>
     <script src="script.js"></script>
   </body>
-  
+
 </html>
