--- a/index.html
+++ b/index.html
@@ -16,46 +16,40 @@
       <header>
         <h1>Password Generator</h1>
       </header>
-      
+
       <!--start of password options form-->
 
-      <form>
+      <form class="form" id="form">
         <h1>Choose Your Password Preferences</h1>
+        <br></br>
         <p>
           <label for="length">Length of Password:</label>
-          <!-- This element has a CSS declaration of `cursor: text` -->
-          <input id="username" type="text" placeholder="First Last" />
+          <input id="pwlength" type="number" placeholder="# between 8 and 128" />
         </p>
         <p>
-          <label  for="email">E-mail:</label>
-          <input id="email" type="text" placeholder="me@example.com" />
+          <label for="letters">Do you want to use lower case letters?</label>
+          <input id="letters" type="checkbox" placeholder="yesNo" />
         </p>
         <p>
-          <label for="expertise">CSS level of expertise:</label>
-          <!-- This element has a CSS declaration of `appearance: menulist` -->
-          <select id="expertise">
-            <option>Beginner</option>
-            <option selected>Intermediate</option>
-            <option>Advanced</option>
-          </select>
+          <label for="upperletters"
+            >Do you want to use upper case letters?</label
+          >
+          <input id="upLetters" type="checkbox" placeholder="yesNo" />
         </p>
         <p>
-          <label for="comment">Comment:</label>
-          <textarea id="comment" placeholder="Great article!"></textarea>
+          <label for="numbers">Do you want to use numbers?:</label>
+          <input id="numbers" type="checkbox" placeholder="yesNo" />
         </p>
         <p>
-          <input class="checkbox" id="agreement" type="checkbox" />
-          <label for="agreement">I agree to share my e-mail address with The CSS Blog</label>
+          <label for="symbols">Do you want to use symbols?:</label>
+          <input id="symbols" type="checkbox" placeholder="yesNo" />
         </p>
         <p>
-          <!-- When this element is in a :focus state, the CSS `outline` property is applied -->
-          <button>Submit</button>
+          <button id="generate" class="btn">Generate Password</button>
         </p>
       </form>
 
-
-
-
+        <!--start of Generate a Password box area-->
 
       <div class="card">
         <div class="card-header">
@@ -70,10 +64,9 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="formcall" class="btn">Click Here</button>
         </div>
       </div>
     </div>
-    
   </body>
 </html>
