--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="formcall" class="btn">Click Here</button>
+          <button id="formcall" class="btn">Start Here</button>
         </div>
       </div>
     </div>
